--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.6.0",
     "miragejs": "^0.1.46",
     "react": "18.2.0",
     "react-dom": "18.2.0",
